<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>qCjyxColorsModuleWidget</class>
 <widget class="qCjyxWidget" name="qCjyxColorsModuleWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>301</width>
    <height>625</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Colors</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../qCjyxColorsModule.qrc">
    <normaloff>:/Icons/Colors.png</normaloff>:/Icons/Colors.png</iconset>
  </property>
  <layout class="QGridLayout" name="gridLayout_7">
   <item row="4" column="1">
    <widget class="ctkDynamicSpacer" name="DynamicSpacer">
     <property name="activeSizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
    </widget>
   </item>
   <item row="0" column="0" colspan="3">
    <widget class="QFrame" name="frame">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="ColorTableLabel">
        <property name="text">
         <string>Colors:</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="qDMMLColorTableComboBox" name="ColorTableComboBox">
          <property name="addEnabled">
           <bool>false</bool>
          </property>
          <property name="removeEnabled">
           <bool>false</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QToolButton" name="CopyColorNodeButton">
          <property name="toolTip">
           <string>Duplicate the current color node to allow editing colors, scalar range, size.</string>
          </property>
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item row="3" column="0" colspan="3">
    <widget class="ctkCollapsibleButton" name="ColorLegendCollapsibleButton">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="text">
      <string>Color Legend</string>
     </property>
     <property name="collapsed">
      <bool>true</bool>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="0">
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="1">
         <widget class="qDMMLNodeComboBox" name="DisplayableNodeComboBox">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="nodeTypes">
           <stringlist>
            <string>vtkDMMLScalarVolumeNode</string>
            <string>vtkDMMLModelNode</string>
           </stringlist>
          </property>
          <property name="addEnabled">
           <bool>false</bool>
          </property>
          <property name="removeEnabled">
           <bool>false</bool>
          </property>
          <property name="editEnabled">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="DisplayableNodeLabel">
          <property name="text">
           <string>Displayable node:</string>
          </property>
         </widget>
        </item>
        <item row="3" column="0" colspan="2">
         <widget class="qDMMLColorLegendDisplayNodeWidget" name="ColorLegendDisplayNodeWidget"/>
        </item>
        <item row="2" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
           <widget class="QPushButton" name="CreateColorLegendButton">
            <property name="toolTip">
             <string>Create color legend for the selected displayable node.</string>
            </property>
            <property name="text">
             <string>Create</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="UseCurrentColorsButton">
            <property name="toolTip">
             <string>Use the currently selected colors for the selected displayable node.</string>
            </property>
            <property name="text">
             <string>Use current colors</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="DeleteColorLegendButton">
            <property name="toolTip">
             <string>Delete the color legend for the selected displayable node.</string>
            </property>
            <property name="text">
             <string>Delete</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="DisplayableNodeLabel_2">
          <property name="text">
           <string>Color legend:</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0" colspan="3">
    <widget class="ctkCollapsibleButton" name="EditColorsCollapsibleButton">
     <property name="text">
      <string>Color Table</string>
     </property>
     <property name="checked">
      <bool>true</bool>
     </property>
     <property name="collapsed">
      <bool>false</bool>
     </property>
     <layout class="QGridLayout" name="gridLayout" columnstretch="0,0">
      <item row="6" column="0" colspan="2">
       <widget class="ctkVTKScalarsToColorsWidget" name="ContinuousScalarsToColorsWidget">
        <property name="minimumSize">
         <size>
          <width>0</width>
          <height>120</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
          <height>120</height>
         </size>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QFrame" name="ColorTableFrame">
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
        <layout class="QFormLayout" name="formLayout_2">
         <property name="horizontalSpacing">
          <number>0</number>
         </property>
         <property name="leftMargin">
          <number>0</number>
         </property>
         <property name="rightMargin">
          <number>0</number>
         </property>
         <property name="bottomMargin">
          <number>0</number>
         </property>
         <item row="0" column="0">
          <widget class="QLabel" name="NumberOfColorsLabel">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="text">
            <string>Number of Colors: </string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
          <widget class="QSpinBox" name="NumberOfColorsSpinBox">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="maximum">
            <number>10000000</number>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="HideInvalidColorsLabel">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="text">
            <string>Hide empty Colors: </string>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
          <widget class="QCheckBox" name="HideInvalidColorsCheckBox">
           <property name="toolTip">
            <string>Show/Hide the unnamed color entries in the list below.</string>
           </property>
           <property name="text">
            <string> </string>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="LUTRangeLabel">
           <property name="text">
            <string>Scalar Range:</string>
           </property>
          </widget>
         </item>
         <item row="3" column="0" colspan="2">
          <widget class="qDMMLRangeWidget" name="LUTRangeWidget">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="toolTip">
            <string>The range of scalars that are mapped to the full range of colors.</string>
           </property>
           <property name="minimum">
            <double>-150.000000000000000</double>
           </property>
           <property name="maximum">
            <double>150.000000000000000</double>
           </property>
           <property name="minimumValue">
            <double>-100.000000000000000</double>
           </property>
           <property name="maximumValue">
            <double>100.000000000000000</double>
           </property>
          </widget>
         </item>
         <item row="4" column="0" colspan="2">
          <widget class="qDMMLColorTableView" name="ColorView">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
          </widget>
         </item>
        </layout>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>qDMMLColorTableComboBox</class>
   <extends>qDMMLNodeComboBox</extends>
   <header>qDMMLColorTableComboBox.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qDMMLColorTableView</class>
   <extends>QTableView</extends>
   <header>qDMMLColorTableView.h</header>
  </customwidget>
  <customwidget>
   <class>qDMMLNodeComboBox</class>
   <extends>QWidget</extends>
   <header>qDMMLNodeComboBox.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qDMMLRangeWidget</class>
   <extends>ctkRangeWidget</extends>
   <header>qDMMLRangeWidget.h</header>
  </customwidget>
  <customwidget>
   <class>qDMMLWidget</class>
   <extends>QWidget</extends>
   <header>qDMMLWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qCjyxWidget</class>
   <extends>QWidget</extends>
   <header>qCjyxWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>qDMMLColorLegendDisplayNodeWidget</class>
   <extends>qDMMLWidget</extends>
   <header>qDMMLColorLegendDisplayNodeWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>ctkVTKScalarsToColorsWidget</class>
   <extends>QWidget</extends>
   <header>ctkVTKScalarsToColorsWidget.h</header>
  </customwidget>
  <customwidget>
   <class>ctkCollapsibleButton</class>
   <extends>QWidget</extends>
   <header>ctkCollapsibleButton.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>ctkDynamicSpacer</class>
   <extends>QWidget</extends>
   <header>ctkDynamicSpacer.h</header>
  </customwidget>
  <customwidget>
   <class>ctkRangeWidget</class>
   <extends>QWidget</extends>
   <header>ctkRangeWidget.h</header>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../qCjyxColorsModule.qrc"/>
  <include location="../../../../../Libs/DMML/Widgets/Resources/qDMMLWidgets.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>qCjyxColorsModuleWidget</sender>
   <signal>dmmlSceneChanged(vtkDMMLScene*)</signal>
   <receiver>ColorTableComboBox</receiver>
   <slot>setDMMLScene(vtkDMMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>359</x>
     <y>54</y>
    </hint>
    <hint type="destinationlabel">
     <x>259</x>
     <y>60</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>EditColorsCollapsibleButton</sender>
   <signal>toggled(bool)</signal>
   <receiver>DynamicSpacer</receiver>
   <slot>setInactive(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>139</x>
     <y>24</y>
    </hint>
    <hint type="destinationlabel">
     <x>231</x>
     <y>470</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>ColorTableComboBox</sender>
   <signal>currentNodeChanged(vtkDMMLNode*)</signal>
   <receiver>ColorView</receiver>
   <slot>setDMMLColorNode(vtkDMMLNode*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>210</x>
     <y>59</y>
    </hint>
    <hint type="destinationlabel">
     <x>232</x>
     <y>224</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>EditColorsCollapsibleButton</sender>
   <signal>toggled(bool)</signal>
   <receiver>ColorView</receiver>
   <slot>setShowOnlyNamedColors(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>193</x>
     <y>110</y>
    </hint>
    <hint type="destinationlabel">
     <x>205</x>
     <y>224</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>HideInvalidColorsCheckBox</sender>
   <signal>toggled(bool)</signal>
   <receiver>ColorView</receiver>
   <slot>setShowOnlyNamedColors(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>127</x>
     <y>99</y>
    </hint>
    <hint type="destinationlabel">
     <x>128</x>
     <y>238</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qCjyxColorsModuleWidget</sender>
   <signal>dmmlSceneChanged(vtkDMMLScene*)</signal>
   <receiver>LUTRangeWidget</receiver>
   <slot>setDMMLScene(vtkDMMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>179</x>
     <y>239</y>
    </hint>
    <hint type="destinationlabel">
     <x>179</x>
     <y>200</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>qCjyxColorsModuleWidget</sender>
   <signal>dmmlSceneChanged(vtkDMMLScene*)</signal>
   <receiver>DisplayableNodeComboBox</receiver>
   <slot>setDMMLScene(vtkDMMLScene*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>154</x>
     <y>544</y>
    </hint>
    <hint type="destinationlabel">
     <x>205</x>
     <y>488</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
